azure-aks/hotrod/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotrod
  namespace: netic-hotrod-app
  labels:
    app.kubernetes.io/name: hotrod
    app.kubernetes.io/instance: hotrod
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hotrod
      app.kubernetes.io/instance: hotrod
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hotrod
        app.kubernetes.io/instance: hotrod
        netic.dk/network-ingress: contour
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      containers:
        - name: hotrod
          image: jaegertracing/example-hotrod@sha256:ea65a21793691c0e76f7fa681514a5c35032711555677a54e7ff1274bd3717cb
          imagePullPolicy: Always
          args:
            # - crash
            - all
            - -m
            - prometheus
          ports:
            - name: http
              containerPort: 8080
            - name: metrics
              containerPort: 8083
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsUser: 1000
            runAsNonRoot: true
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
