azure-aks/hotrod/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hotrod
  namespace: netic-hotrod-app
  labels:
    app.kubernetes.io/name: hotrod
    app.kubernetes.io/instance: hotrod
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 8083
      targetPort: metrics
      protocol: TCP
  selector:
    app.kubernetes.io/name: hotrod
    app.kubernetes.io/instance: hotrod
